popup windows no longer go out of screen

--- a/src/css/weave.css
+++ b/src/css/weave.css
@@ -6,6 +6,7 @@ html {
 body {
 	margin: 0;
 	color: #333;
+	overflow: hidden;
 }
 
 .axis path,
